@@ -1,3 +1,8 @@
+2004-10-15  Bruno Haible  <bruno@clisp.org>
+
+	* defstruct.lisp (defstruct): Take the slots list and instance size
+	from the included class if possible.
+
 2004-10-13  Bruno Haible  <bruno@clisp.org>
 
 	* clos-genfun2b.lisp (compute-discriminating-function-<generic-function>):
